--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-  <string name="app_name">Yanglegeji</string>
+  <string name="app_name_en">Yanglegeji</string>
+  <string name="app_name_cn">养了个机</string>
+  <string name="logo">logo</string>
+
+  <string name="input_pet_name">请输入您宠物的名称</string>
+  <string name="input_master_name">请输入宠物称呼您的名称</string>
+  <string name="next_step">下一步</string>
+  <string name="complete">完成</string>
+
+  <string name="alert_dialog_title_tip">Boom</string>
 </resources>
